@@ -1,3 +1,7 @@
+2005-08-26  Florian Boor  <florian.boor@kernelconcepts.de>
+
+    * gstplayer.c, player.h: Change setup to use decodebin instead of spider.
+
 2005-08-02  Florian Boor  <florian.boor@kernelconcepts.de>
 
 	* gpe-nmf.c, backend/playlist_db.h,
